--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
-    "pg": "^8.4.0"
+    "pg": "^8.4.0",
+    "serverless-http": "^2.7.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "serverless-offline": "^6.9.0"
   }
 }
