--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: serverless deploy
+      - run: npm install
+      - name: Serverless Deploy
         uses: serverless/github-action@master
         with:
           args: deploy
