fix deploy action credentials

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,5 @@ jobs:
         with:
           args: deploy
         env:
-          SERVERLESS_ACCESS_IDY: ${{ secrets.AWS_SERVERLESS_ACCESS_ID }}
-          SERVERLESS_ACCESS_KEY: ${{ secrets.AWS_SERVERLESS_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
