--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Production Environment
+name: Deploy
 
 on:
   push:
@@ -19,7 +19,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install
+      - name: Run npm install
+        run: npm install
       - name: Serverless Deploy
         uses: serverless/github-action@master
         with:
