--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -14,7 +15,9 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.2",
     "morgan": "~1.9.1",
+    "node-fetch": "^2.6.1",
     "pg": "^8.4.0",
     "serverless-http": "^2.7.0"
   },
