--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-fileupload": "^1.2.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.2",
